<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:fbutton="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@color/white"
tools:context=".MainActivity">

<TextView
    android:id="@+id/tQ"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/app_name"
    android:gravity="center"
    android:fontFamily="@font/capriola"
    android:textColor="#000"
    android:textSize="50sp"/>
<View
    android:layout_width="match_parent"
    android:layout_height="20dp"></View>

<ImageView
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:src="@drawable/triviafinal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"></View>

<info.hoang8f.widget.FButton
    android:id="@+id/playGame"
    fbutton:buttonColor="@color/red"
    android:layout_width="300dp"
    android:text="@string/play_game"
    android:textSize="18sp"
    android:fontFamily="@font/capriola"
    android:textColor="@color/white"
    android:layout_height="wrap_content" />

<View
    android:layout_width="match_parent"
    android:layout_height="40dp"></View>


<info.hoang8f.widget.FButton
    android:id="@+id/profileButton"
    fbutton:buttonColor="@color/red"
    android:layout_width="300dp"
    android:text="User Profile"
    android:layout_height="wrap_content"
    android:textSize="18sp"
    android:fontFamily="@font/capriola"
    android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"></View>


    <info.hoang8f.widget.FButton
        android:id="@+id/quitButton"
        fbutton:buttonColor="@color/red"
        android:layout_width="300dp"
        android:text="@string/quit"
        android:textSize="18sp"
        android:fontFamily="@font/capriola"
        android:textColor="@color/white"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="70dp"></View>
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/capriola"
        android:text="powered by"
        android:textSize="10dp"
        android:textColor="@color/grey" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/capriola"
        android:text="Techknights : Programming Club, RTU"
        android:textColor="@color/grey"
        android:textSize="10dp" />

</LinearLayout>
