<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:fbutton="http://schemas.android.com/apk/res-auto"
android:id="@+id/activity_main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
android:orientation="vertical">

    <RelativeLayout
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:padding="0dp">


        <TextView
            android:id="@+id/coinText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="TechQ"
            android:textColor="@android:color/black"
            android:fontFamily="@font/capriola"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:text="@string/time"
            android:textSize="20sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"></View>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".5"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/triviaQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/question"
                    android:fontFamily="@font/capriola"
                    android:textColor="@color/grey"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/green"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <info.hoang8f.widget.FButton
                    android:id="@+id/buttonA"
                    android:textColorHighlight="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="buttonA"
                    android:text=""
                    android:textSize="18sp"
                    android:fontFamily="@font/capriola"
                    android:textColor="@color/white"></info.hoang8f.widget.FButton>

                <info.hoang8f.widget.FButton
                    android:id="@+id/buttonB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="buttonB"
                    android:text=""
                    android:textSize="18sp"
                    android:fontFamily="@font/capriola"
                    android:textColor="@color/white" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/buttonC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="buttonC"
                    android:text=""
                    android:textSize="18sp"
                    android:fontFamily="@font/capriola"
                    android:textColor="@color/white" />

                <info.hoang8f.widget.FButton
                    android:id="@+id/buttonD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:onClick="buttonD"
                    android:text=""
                    android:textSize="18sp"
                    android:fontFamily="@font/capriola"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <info.hoang8f.widget.FButton
                        android:layout_weight="1"
                        android:id="@+id/dialogPrev"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/prev"
                        android:layout_margin="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:fontFamily="@font/capriola"/>

                    <info.hoang8f.widget.FButton
                        android:layout_weight="1"
                        android:id="@+id/dialogNext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:layout_margin="10dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:fontFamily="@font/capriola"/>


                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

    </ScrollView>












</LinearLayout>